# webbox

./: .gitignore  package.json  plan.md  pnpm-lock.yaml
apps/generator/: package.json  tailwind.config.js
apps/generator/src/: App.tsx  index.css
apps/generator/src-tauri/: Cargo.toml  tauri.conf.json
apps/generator/src-tauri/capabilities/: default.json
apps/generator/src-tauri/src/: main.rs
apps/generator/src-tauri/src/commands/: generate.rs  icon.rs  mod.rs  plist.rs
apps/generator/src/components/: Form.tsx  ProgressBar.tsx  SuccessView.tsx
apps/generator/src/hooks/: useGenerateApp.ts
apps/template/: package.json
apps/template/src-tauri/: Cargo.toml  tauri.conf.json
apps/template/src-tauri/capabilities/: default.json
apps/template/src-tauri/resources/: config.json  notification-bridge.js
apps/template/src-tauri/src/: main.rs
